2009-02-11  Dimitri Dupuis-latour  <dupuislatour@apple.com>

        Stub out InspectorClientQt::hiddenPanels.

        Reviewed by Timothy Hatcher.

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::hiddenPanels):
        * WebCoreSupport/InspectorClientQt.h:

2009-02-10  Karsten Heimrich  <kheimric@trolltech.com>

        Reviewed by Simon Hausmann.

        Fixes missing navigation/url update while clicking on anchor inside
        webpage.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidChangeLocationWithinPage):
        update and emit in case we navigate inside a webpage

2009-02-10  Adam Treat  <adam.treat@torchmobile.com>

        Fix the Qt build as class Selection is now VisibleSelection.

        * Api/qwebpage.cpp:
        (QWebPage::inputMethodQuery):

2009-02-06  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::updateGlobalHistoryRedirectLinks):
        * WebCoreSupport/FrameLoaderClientQt.h:

2009-02-06  Kavindra Palaraja  <kavindra.palaraja@nokia.com>

        Reviewed by Simon Hausmann.

        Doc - made 2 functions internal as they are not part of the API anymore (and this fixes 2 qdoc warnings)

        * Api/qwebsettings.cpp:

2009-02-06  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Added an overload of QWebFrame::addToJavaScriptWindowObject that takes a QScriptEngine::ValueOwnership parameter.

        * Api/qwebframe.cpp:
        (QWebFrame::addToJavaScriptWindowObject): New overload.
        * Api/qwebframe.h:
        * tests/qwebframe/tst_qwebframe.cpp: Added unit tests for ownership
        models.

2009-02-06  Aaron Boodman  <aa@chromium.org>

        Reviewed by Holger Freyther.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::documentElementAvailable):)